[package]
name = "unyo"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2 = { version = "0.37.0", features = ["ttf", "gfx", "image"] }
chrono = "0.4.40"
lazy_static = "1.5.0"
geolocation = "0.2.1"
isahc = "1.7.2"
get_if_addrs = "0.5.3"
serde_json = "1.0.140"
ffmpeg-the-third = "3.0.1"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
# bluebus = "0.1.4"
zbus = "5.5.0"
zvariant = "5.4.0"
